# website-searcher

./: .dockerignore  .gitignore  CLOUDFLARE_BYPASS_PLAN.md  Cargo.toml  Dockerfile  GUI_PLAN.md  LICENSE  PLAN.md  README.md  compile.ps1  compile.py  compile.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quickstart.ps1  quickstart.py  quickstart.sh  rust-toolchain.toml  set_version.py  temp.ps1  temp1.ps1  test.py  wix.toml
.cargo/: config.toml
.cursor/rules/: cloudflare-and-scraping.mdc  github-actions.mdc  project-structure.mdc  rust.mdc  typescript.mdc
.devcontainer/: devcontainer.json
.github/workflows/: build-arch.yml  build-linux.yml  build-macos.yml  build-windows.yml  ci.yml  release-all.yml  release.yml
config/: sites.toml
crates/cli/: Cargo.toml  main.rs
crates/cli/tests/: cli_cf_mock.rs  cli_cookie_forwarding.rs  cli_dedup_and_limit.rs  cli_no_results_table.rs  cli_playwright_smoke.rs  integration_smoke.rs
crates/cli/wix/: License.rtf  main.wxs
crates/core/: Cargo.toml
crates/core/src/: analyzer.rs  anti_detection.rs  cache.rs  cf.rs  config.rs  fetcher.rs  lib.rs  models.rs  monitoring.rs  output.rs  parser.rs  query.rs  query_parser.rs  rate_limiter.rs  resilience.rs
debug/: ankergames_sample.html  atopgames_sample.html  elamigos_sample.html  skidrowrepacks_sample.html  steamrip_sample.html
docker/: prometheus.yml
docker/grafana/provisioning/dashboards/: dashboard.yml  websearcher.json
docker/grafana/provisioning/datasources/: prometheus.yml
docs/: ADVANCED_SEARCH.md  API.md  ARCHITECTURE.md  CLI.md  DEVELOPMENT.md  DOCKER.md  GUI.md  INSTALLATION.md  MONITORING.md  PACKAGING.md  SITES.md  TESTING.md
gui/: .gitignore  package.json  playwright.config.ts  vitest.config.ts
gui/coverage/: App.tsx.html  api.ts.html  index.html  vite-env.d.ts.html
gui/e2e/: app.spec.ts
gui/playwright-report/: index.html
gui/src/: App.css  App.test.tsx  App.tsx  api.test.ts  api.ts
gui/src/hooks/: useRealtimeSearch.ts
scripts/: csrin_search.cjs  csrin_search.js  mock_solver.js  ws  ws.cmd
src/: cf.rs  config.rs  fetcher.rs  main.rs  models.rs  output.rs  parser.rs  query.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/linux/: postinst.sh  prerm.sh
src-tauri/src/: lib.rs
src-tauri/wix/: License.rtf  cli_and_path.wxs  main.wxs
tests/: cli_cf_mock.rs  cli_cookie_forwarding.rs  cli_no_results_table.rs  cli_playwright_smoke.rs  integration_smoke.rs
wix/: cli_and_path.wxs
