[package]
name = "website-searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "json"] }
scraper = "0.19"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored_json = "5.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
serde_urlencoded = "0.7"
