[package]
name = "website-searcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "json"] }
scraper = "0.24"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored_json = "5.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0.16"
urlencoding = "2.1"
serde_urlencoded = "0.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.4"
pretty_assertions = "1.4"
