[package]
name = "website-searcher-gui"
version = "1.3.0"
description = "A Tauri App"
authors = ["reekid420"]
license = "MIT"
repository = "https://github.com/reekid420/website-searcher"
edition = "2024"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
website_searcher_core = { path = "../crates/core" }
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "fs",
    "process",
    "io-util",
] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "json",
] }
serde_urlencoded = "0.7"
urlencoding = "2.1"
dirs = "6.0"
