[package]
name = "website-searcher"
version = "0.1.0"
license = "MIT"
authors = ["reekid420"]
rust-version = "1.89"
edition = "2024"

[[bin]]
name = "website-searcher"
path = "main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
inquire = { version = "0.6", default-features = true }
atty = "0.2"
futures = "0.3"
ratatui = { version = "0.27", default-features = false, features = ["crossterm"] }
crossterm = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "json"] }
scraper = "0.24"
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "process", "io-util"] }
website_searcher_core = { path = "../core" }
urlencoding = "2.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.4"
pretty_assertions = "1.4"


