[package]
name = "website_searcher_core"
version = "1.3.0"
license = "MIT"
authors = ["reekid420"]
rust-version = "1.89"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "fs",
    "process",
    "io-util",
] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "json",
] }
scraper = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
notify = "6.1"
dirs = "5.0"
colored_json = "5.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
urlencoding = "2.1"
serde_urlencoded = "0.7"
tabled = "0.20.0"
textwrap = "0.16"
terminal_size = "0.4.3"
rand = "0.8"
regex = "1.10"

[dev-dependencies]
mockito = "1.4"
pretty_assertions = "1.4"
tempfile = "3.0"
